tests/simple/src/good/null-deref_write-with-check_1.c
#include <stdio.h>

int main() {
  int *ptr = NULL;

  if (ptr != NULL) {
    *ptr = 0xdeadbeef;
  }
  return 0;
}
