tests/simple/src/bad/null-deref_write.c
#include <stdio.h>

int main() {
  int *ptr = NULL;

  *ptr = 0xdeadbeef;
  return 0;
}
